# mastodonpp

./: .clang-format  .clang-tidy  .drone.yml  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  Doxyfile  README.adoc  build_doc.sh
cmake/: CMakeLists.txt  Doxygen.cmake  debug_flags.cmake  mastodonppConfig.cmake.in  packages.cmake
docs/: ____bsd__locale__defaults_8h_source.html  ____bsd__locale__fallbacks_8h_source.html  ____cxxabi__config_8h_source.html  ____nop__locale__mgmt_8h_source.html  ____posix__l__fallback_8h_source.html  ____strtonum__fallback_8h_source.html  annotated.html  answer_8hpp_source.html  api_8hpp_source.html  classes.html  classlocale__t-members.html  classlocale__t.html  classmastodonpp_1_1API-members.html  classmastodonpp_1_1API.html  classmastodonpp_1_1CURLException-members.html  classmastodonpp_1_1CURLException.html  classmastodonpp_1_1CURLException__coll__graph.map  classmastodonpp_1_1CURLException__inherit__graph.map  classmastodonpp_1_1CURLException__inherit__graph.md5  classmastodonpp_1_1CURLWrapper-members.html  classmastodonpp_1_1CURLWrapper.html  classmastodonpp_1_1CURLWrapper__coll__graph.map  classmastodonpp_1_1CURLWrapper__coll__graph.md5  classmastodonpp_1_1CURLWrapper__inherit__graph.map  classmastodonpp_1_1CURLWrapper__inherit__graph.md5  classmastodonpp_1_1Connection-members.html  classmastodonpp_1_1Connection.html  classmastodonpp_1_1Connection__coll__graph.map  classmastodonpp_1_1Connection__coll__graph.md5  classmastodonpp_1_1Connection__inherit__graph.map  classmastodonpp_1_1Connection__inherit__graph.md5  classmastodonpp_1_1Instance-members.html  classmastodonpp_1_1Instance.html  classmastodonpp_1_1Instance_1_1ObtainToken-members.html  classmastodonpp_1_1Instance_1_1ObtainToken.html  classmastodonpp_1_1Instance_1_1ObtainToken__coll__graph.map  classmastodonpp_1_1Instance_1_1ObtainToken__coll__graph.md5  classmastodonpp_1_1Instance_1_1ObtainToken__inherit__graph.map  classmastodonpp_1_1Instance_1_1ObtainToken__inherit__graph.md5  classmastodonpp_1_1Instance__coll__graph.map  (+115 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+16 more)
examples/: CMakeLists.txt  example01_instance_info.cpp  example02_streaming.cpp  example03_post_status.cpp  example04_post_with_attachment.cpp  example05_update_notification_settings.cpp  example06_update_name.cpp  example07_delete_status.cpp  example08_obtain_token.cpp  example09_nlohmann_json.cpp
include/: CMakeLists.txt  answer.hpp  api.hpp  connection.hpp  curl_wrapper.hpp  exceptions.hpp  helpers.hpp  instance.hpp  mastodonpp.hpp  request.hpp  return_types.hpp  types.hpp
pkg-config/: mastodonpp.pc.in
src/: CMakeLists.txt  answer.cpp  api.cpp  connection.cpp  curl_wrapper.cpp  exceptions.cpp  helpers.cpp  instance.cpp  log.hpp  mastodonpp.cpp  request.cpp  return_types.cpp  types.cpp  version.hpp.in
tests/: CMakeLists.txt  main.cpp  test_connection.cpp  test_html_unescape.cpp  test_instance.cpp  test_instanciation.cpp
